--- a/Backend-Chat/src/main/resources/i18n/messages_en.properties
+++ b/Backend-Chat/src/main/resources/i18n/messages_en.properties
@@ -30,5 +30,6 @@ exception.auth.expired.refresh.token=Refresh token was expired
 
 #User
 exception.user.not.found.username=User not found with this username: {0}
+exception.user.not.found.email=User not found with this email: {0}
 exception.user.not.found.id=User not found with id: {0}
 exception.user.already.exist=User with {0} is already exist
