Add file attachment of message

--- a/Backend-Chat/src/main/resources/i18n/messages_en.properties
+++ b/Backend-Chat/src/main/resources/i18n/messages_en.properties
@@ -18,9 +18,9 @@ invalid.date-format=Wrong or Invalid datetime picker
 invalid.datetime-format=DateTime must be format yyyy-MM-dd HH:mm:ss
 invalid.date-future=Date must format yyyy-MM-dd and greater than current date
 invalid.file-image=Only PNG, JPG, JPEG, WEBP or GIF images are allowed
-invalid.file.type=Images only allow PNG, JPG, JPEG, WEBP or GIF formats and videos only allow MP4, AVI, MKV, MOV, WMV, FLV, WEBM, MPEG or M4V formats
+invalid.file.type= Invalid file format
 invalid.file.size=Upload only images up to 5MB in size and videos up to 20MB
-invalid.list-file=Only choose up to 5 images and 1 video
+invalid.number.of.files=Only choose up to 5 images and 1 video
 
 #Auth
 exception.auth.incorrect.username=Username is incorrect
@@ -33,3 +33,6 @@ exception.user.not.found.username=User not found with this username: {0}
 exception.user.not.found.email=User not found with this email: {0}
 exception.user.not.found.id=User not found with id: {0}
 exception.user.already.exist=User with {0} is already exist
+
+#Message
+exception.message.not.found.id=Message not found with id: {0}
