Update async for upload file attachment

--- a/Backend-Chat/src/main/resources/i18n/messages_en.properties
+++ b/Backend-Chat/src/main/resources/i18n/messages_en.properties
@@ -18,7 +18,7 @@ invalid.date-format=Wrong or Invalid datetime picker
 invalid.datetime-format=DateTime must be format yyyy-MM-dd HH:mm:ss
 invalid.date-future=Date must format yyyy-MM-dd and greater than current date
 invalid.file-image=Only PNG, JPG, JPEG, WEBP or GIF images are allowed
-invalid.file.type= Invalid file format
+invalid.file.type= Invalid file format image and video
 invalid.file.size=Upload only images up to 5MB in size and videos up to 20MB
 invalid.number.of.files=Only choose up to 5 images and 1 video
 
